--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,4 +1,30 @@
 .p-login {
     width: 500px;
     margin: 50px auto; 
+    padding: 50px;
+    border-radius: 10%;
+    background-image: linear-gradient( rgb(171, 171, 172), rgb(230, 233, 235));
+    color: white;
 } 
+
+.p-login > h1{
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+}
+
+.p-login > p {
+    text-align: center;
+}
+
+.p-login-spinner {
+    height: 100vh;
+}
+
+/* .spinner-border {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
