--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,20 +1,33 @@
 .p-login {
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.p-login > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.p-form-login {
+    position: absolute;
     width: 500px;
     margin: 50px auto; 
     padding: 50px;
     border-radius: 10%;
-    background-image: linear-gradient( rgb(171, 172, 172), rgb(230, 233, 235));
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(231, 231, 231, .3) 22.39%, rgba(209, 209, 209,  .3) 42.6%, rgba(182, 182, 182, .3) 79.19%, rgba(156, 156, 156, .3) 104.86%);
     /* background-image: linear-gradient( rgb(9, 241, 59), rgb(230, 233, 235)); */
     color: white;
+    right: 100%
 } 
 
-.p-login > h1{
+.p-form-login > h1{
     font-weight: bold;
     text-align: center;
     font-family: 'Oswald', sans-serif;
 }
 
-.p-login > p {
+.p-form-login > p {
     text-align: center;
 }
 
