--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,4 +1,4 @@
-.p-home {
+/* .p-home {
     display: flex;
     justify-content: center;
     position: relative;
@@ -8,12 +8,33 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+} */
+
+.p-home .p-home-bg-img {
+    background-image: url('../../asserts/three.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-bottom: 400px;
 }
 
 .p-home > h1 {
-    position: absolute;
+    
 }
 
 .p-home > p {
-    position: absolute;
+    
+}
+
+.p-home .temp{
+    padding: 200px;
+}
+
+.p-home .p-home-carousel {
+    width: 50%;
+    margin: auto;
+}
+
+.p-home .p-home-carousel .carousel-inner .carousel-item > img {
+    width: 100%;
 }
