--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,24 +1,33 @@
 .p-login {
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    position: relative;
+    position: relative; */
 }
 
 .p-login > img {
-    width: 100%;
+    /* width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; */
 }
+
+.p-login .p-login-bg-img {
+    background-image: url('../../asserts/login.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+}
+
 .p-form-login {
-    position: absolute;
-    width: 500px;
-    margin: 50px auto; 
-    padding: 50px;
-    border-radius: 10%;
-    background-image: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(231, 231, 231, .3) 22.39%, rgba(209, 209, 209,  .3) 42.6%, rgba(182, 182, 182, .3) 79.19%, rgba(156, 156, 156, .3) 104.86%);
+    /* position: absolute; */
+    width: 100%;
+    /* margin: 50px auto;  */
+    padding: 20px 10px 300px 10px;
+    /* border-radius: 10%; */
+    /* background-image: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(231, 231, 231, .3) 22.39%, rgba(209, 209, 209,  .3) 42.6%, rgba(182, 182, 182, .3) 79.19%, rgba(156, 156, 156, .3) 104.86%); */
     /* background-image: linear-gradient( rgb(9, 241, 59), rgb(230, 233, 235)); */
     color: white;
-    right: 100%
+    /* right: 100% */
 } 
 
 .p-form-login > h1{
@@ -33,6 +42,17 @@
 
 .p-login-spinner {
     height: 100vh;
+}
+
+@media (min-width: 992px) {
+    
+    .p-form-login {
+        width: 500px;
+        padding: 50px 50px 150px 50px;
+        border-radius: 10%;
+        margin: 50px auto;
+        background-image: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(231, 231, 231, .3) 22.39%, rgba(209, 209, 209,  .3) 42.6%, rgba(182, 182, 182, .3) 79.19%, rgba(156, 156, 156, .3) 104.86%);
+    }
 }
 
 /* .spinner-border {
