--- a/src/pages/SignupPage/SignupPage.css
+++ b/src/pages/SignupPage/SignupPage.css
@@ -1,27 +1,35 @@
-.p-signup {
+/* .p-signup {
     display: flex;
     justify-content: center;
     position: relative;
-}
+} */
 
-.p-signup > img {
+/* .p-signup > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+} */
+
+.p-signup .p-signup-bg-img {
+    background-image: url('../../asserts/signup.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .p-form-signup {
-    position: absolute;
-    width: 500px;
-    height: 100%;
-    margin: 50px auto; 
-    padding: 50px;
-    border-radius: 10%;
+    /* position: absolute; */
+    width: 100%;
+    margin: 0 auto;
+    /* height: 100%; */
+    /* margin: 50px auto;  */
+    padding: 10px;
+    /* border-radius: 10%; */
     background-image: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(231, 231, 231, .3) 22.39%, rgba(209, 209, 209,  .3) 42.6%, rgba(182, 182, 182, .3) 79.19%, rgba(156, 156, 156, .3) 104.86%);
     /* background-image: linear-gradient( rgb(171, 171, 172), rgb(230, 233, 235)); */
     color: black;
-    right: 30%;
-    top: -11%;
+    /* right: 30%;
+    top: -11%; */
     background-color: transparent;
     /* opacity: 0.5; */
 } 
@@ -49,6 +57,15 @@
 
 .p-form-signup .form-group {
     margin-bottom: 0;
+}
+
+@media (min-width: 992px) {
+    
+    .p-form-signup {
+        width: 30%;
+        padding: 50px 50px 150px 50px;
+        border-radius: 10%;
+    }
 }
 
 
