--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -31,10 +31,78 @@
 }
 
 .p-home .p-home-carousel {
-    width: 50%;
+    width: 100%;
     margin: auto;
 }
 
 .p-home .p-home-carousel .carousel-inner .carousel-item > img {
     width: 100%;
+}
+
+.p-home .p-home-carousel .carousel-inner .carousel-first-item .carousel-caption {
+    font-weight: bold;
+    color: black; 
+}
+
+.p-home .p-home-carousel .carousel-inner .carousel-second-item .carousel-caption {
+    font-weight: bold;
+    color: black; 
+}
+
+.p-home .p-home-carousel .carousel-inner .carousel-third-item .carousel-caption {
+    font-weight: bold;
+    color: black; 
+}
+
+.p-home .p-home-carousel .carousel-inner .carousel-forth-item .carousel-caption > p{
+    font-weight: bold;
+    color: black; 
+}
+
+.p-home .p-home-carousel .carousel-inner .carousel-fifth-item .carousel-caption > p{
+    font-weight: bold;
+    color: black; 
+}
+
+@media (min-width: 992px) {
+    
+    .p-home .p-home-carousel {
+        width: 80%;
+        margin: auto;
+    }
+
+    .p-home .p-home-carousel .carousel-inner .carousel-item .carousel-caption > h3 {
+        margin-bottom: 50%; 
+        margin-right: 10%;
+    }
+
+    .p-home .p-home-carousel .carousel-inner .carousel-item .carousel-caption > p {
+        padding: 20px;
+        background-image: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(231, 231, 231, .3) 22.39%, rgba(209, 209, 209,  .3) 42.6%, rgba(182, 182, 182, .3) 79.19%, rgba(156, 156, 156, .3) 104.86%);
+    }
+
+    .p-home .p-home-carousel .carousel-inner .carousel-third-item .carousel-caption > h3 {
+        margin-bottom: 10%; 
+        margin-right: 10%;
+    }
+
+    .p-home .p-home-carousel .carousel-inner .carousel-third-item .carousel-caption > p {
+        padding: 100px;
+        background-image: none;
+    }
+
+    .p-home .p-home-carousel .carousel-inner .carousel-fifth-item .carousel-caption > h3 {
+        margin-bottom: 60%; 
+        margin-right: 10%;
+    }
+
+    /* .p-home .p-home-carousel .carousel-inner .carousel-first-item .carousel-caption > h3 {
+        margin-bottom: 50%; 
+        margin-right: 10%;
+    }
+
+    .p-home .p-home-carousel .carousel-inner .carousel-second-item .carousel-caption > h3 {
+        margin-bottom: 50%; 
+    } */
+
 }
