--- a/src/components/HoaAccordion/HoaAccordion.css
+++ b/src/components/HoaAccordion/HoaAccordion.css
@@ -1,3 +1,24 @@
-/* .c-hoa-accordion .accordion .card-header {
-    background-color: lightskyblue;
+.c-hoa-accordion .accordion .card-header {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+}
+
+.c-hoa-accordion .accordion .card-header .btn-link{
+    color: black;
+    font-weight: bold;
+    text-decoration: none !important;
+    border: none;
+}
+
+/* .c-hoa-accordion .accordion .card-header .btn-link :hover{
+    color: black;
+    font-weight: bold;
+    text-decoration: none !important;
 } */
+
+.c-hoa-accordion .accordion .card-header .btn:focus {
+    outline: none;
+    box-shadow: none;
+}
+
