--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -81,9 +81,9 @@
         background-image: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(231, 231, 231, .3) 22.39%, rgba(209, 209, 209,  .3) 42.6%, rgba(182, 182, 182, .3) 79.19%, rgba(156, 156, 156, .3) 104.86%);
     }
 
-    .p-home .p-home-carousel .carousel-inner .carousel-second-item > img {
-        src: url('../../asserts/login.jpg');
-    }
+    /* .p-home .p-home-carousel .carousel-inner .carousel-second-item > img {
+        background: url('../../asserts/login.jpg') no-repeat;
+    } */
 
     .p-home .p-home-carousel .carousel-inner .carousel-third-item .carousel-caption > h3 {
         margin-bottom: 10%; 
