--- a/src/pages/MessagePage/MessagePage.css
+++ b/src/pages/MessagePage/MessagePage.css
@@ -1,4 +1,4 @@
-.p-message {
+/* .p-message {
     display: flex;
     justify-content: center;
     position: relative;
@@ -8,4 +8,14 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+} */
+
+.p-message .new-message {
+    text-align: end;
+    padding: 10px;
+}
+
+.p-message .new-message .btn:focus {
+    outline: none;
+    box-shadow: none;
 }
