--- a/src/components/MessageCard/MessageCard.css
+++ b/src/components/MessageCard/MessageCard.css
@@ -7,3 +7,37 @@
     height:50%;
     overflow: scroll;
 }
+
+/* .userCommentArea {
+    width:100%;
+    max-height:20%;
+    overflow: scroll; 
+} */
+
+/* .col-md-6 .form-group {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 0, 0.5);
+    box-sizing: border-box;
+}
+
+.col-md-6 .userCommentArea {
+    background-color: green;
+    height: calc(100% - 26px);
+} */
+
+/* textarea.form-control {
+    height: 100%;
+}
+
+div.userCommentArea.form-group {
+    width: 100%;
+    max-height: 100%;
+    background-color: rgba(255, 255, 0, 0.5);
+    box-sizing: border-box;
+} */
+
+/* .form-group {
+    max-height: 100%;
+    overflow: scroll; 
+} */
