--- a/src/components/MessageCard/MessageCard.css
+++ b/src/components/MessageCard/MessageCard.css
@@ -8,6 +8,10 @@
     overflow: scroll;
 }
 
+.userComment > div > img {
+    width:5%;
+}
+
 /* .userCommentArea {
     width:100%;
     max-height:20%;
