--- a/src/components/TenantCard/TenantCard.css
+++ b/src/components/TenantCard/TenantCard.css
@@ -4,8 +4,8 @@
 }
 
 .c-tenant-card .card {
-    background-image: linear-gradient(rgb(240, 221, 188), rgb(174, 155, 123));
-    /* background-image: url('../../asserts/tenants.jpg'); */
+    /* background-image: linear-gradient(rgb(240, 221, 188), rgb(174, 155, 123)); */
+    background-image: url('../../asserts/wall1.jpg');
 }
 
 div.col-md-8.c-tenant-info.col {
@@ -23,7 +23,7 @@ div.col-md-8.c-tenant-info.col {
     div.col-md-8.c-tenant-info.col {
         display:flex;
         align-items: center;
-        color: white;
+        color: black;
         font-size: x-large;
         font-family: cursive;
         font-weight: bold;
