--- a/src/components/MessageCard/MessageCard.css
+++ b/src/components/MessageCard/MessageCard.css
@@ -12,6 +12,14 @@
     width: 10%;
 }
 
+/* div.col-md-4.p-2.c-message-info.col {
+    display:flex;
+    align-items: center;
+    color: black;
+    font-family: cursive;
+    font-weight: bold;
+} */
+
 @media (min-width: 992px) {
     .userComment > div > img {
         width: 5%;
