--- a/src/components/MessageCard/MessageCard.css
+++ b/src/components/MessageCard/MessageCard.css
@@ -2,15 +2,25 @@
     margin: 2px;
     padding: 10px;
 }
-.userComment{
+/* .userComment{
     width:100%;
-    height:50%;
-    overflow: scroll;
-}
+    max-height:60%;
+    overflow-y: scroll;
+} */
+
+/* .c-message-info{
+    width:100%;
+} */
 
 .userComment > div > img {
     width: 10%;
 }
+
+/* .c-comment-input{
+    display: flex;
+    flex-wrap: nowrap;
+    margin:10px 0;
+} */
 
 /* div.col-md-4.p-2.c-message-info.col {
     display:flex;
@@ -21,6 +31,11 @@
 } */
 
 @media (min-width: 992px) {
+    .userComment{
+        width:100%;
+        max-height:60%;
+        overflow-y: scroll;
+    }
     .userComment > div > img {
         width: 5%;
     }
